<resources>
    <string name="app_name">Timetable for Winter-2021</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="welcome">Welcome</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="mon_schedule">Schedule for Monday</string>
</resources>